--- a/ShareFileSnapIn-Installer-x64/Product.wxs
+++ b/ShareFileSnapIn-Installer-x64/Product.wxs
@@ -2,6 +2,7 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" 
      xmlns:ps="http://schemas.microsoft.com/wix/PSExtension" 
      xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
+  <?include Globals.wxi ?>
   <Product Id="*" Name="ShareFile SnapIn Installer" Language="1033" Version="1.0.0.0" Manufacturer="Ebricks-Inc" UpgradeCode="51c1b824-3eb6-4e34-8696-021bf7b56734">
     <Package Id="*" InstallerVersion="200" Platform="x64" Compressed="yes" InstallScope="perMachine" />
 
@@ -10,13 +11,13 @@
 
     <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
     <UIRef Id="WixUI_InstallDir" />
-
+    
     <Feature Id="ProductFeature" Title="ShareFileSnapIn_Installer" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
       <ComponentRef Id="CMP_DocumentationShortcut" />
     </Feature>
 
-    <Icon Id="ShareFileIcon.ico" SourceFile="..\ShareFileSnapIn\bin\Release\Assets\sf-icon.ico"/>
+    <Icon Id="ShareFileIcon.ico" SourceFile="$(var.SourcePathAssets)\sf-icon.ico"/>
     <Property Id="ARPPRODUCTICON" Value="ShareFileIcon.ico" />
 
     <PropertyRef Id="NETFRAMEWORK45"/>
@@ -35,9 +36,12 @@
         <Shortcut Id="RunPowershell" Name="ShareFile PowerShell Console" Description="Start a PowerShell console with ShareFile support"
                   Target="[System64Folder]windowspowershell\v1.0\powershell.exe" Arguments="-NoExit -ExecutionPolicy Bypass -Command &quot;&amp; '[#InstallTestSnapIn.ps1]'&quot;" />
         <RemoveFolder Id="RemoveShareFileShortcutsDir" On="uninstall" />
-        <RegistryValue Root="HKCU" Key="Software\Microsoft\[ProductName]" Name="installed" Type="integer" Value="1" KeyPath="yes" />
+        <RegistryValue Root="HKCU" Key="Software\Microsoft\[ProductName]" Name="installed" Type="integer" Value="4" KeyPath="yes" />
       </Component>
     </DirectoryRef>
+
+    <WixVariable Id="WixUILicenseRtf" Value="$(var.SourcePathAssets)\Citrix EULA.rtf" />
+    <WixVariable Id="WixUIDialogBmp" Value="$(var.SourcePathAssets)\branding.jpg" />
   </Product>
 
   <Fragment>
@@ -66,36 +70,36 @@
   <Fragment>
     <ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
       <Component Guid="e5550174-46ff-4919-9bcf-6216364f16a3" Win64="yes">
-        <File Id="ShareFileSnapIn.dll" Name="ShareFileSnapIn.dll" Vital="yes" Source="..\ShareFileSnapIn\bin\Release\ShareFileSnapIn.dll"
+        <File Id="ShareFileSnapIn.dll" Name="ShareFileSnapIn.dll" Vital="yes" Source="$(var.SourceRootPath)\ShareFileSnapIn.dll"
               KeyPath="yes" Assembly=".net" AssemblyApplication="ShareFileSnapIn.dll">
-          <ps:SnapIn Id="ShareFile" Description="ShareFile Formats" Vendor="Citrix ShareFile">
+          <ps:SnapIn Id="ShareFile" Description="$(var.Description)" Vendor="$(var.Vendor)">
             <ps:FormatsFile FileId="ShareFile.Formats" />
           </ps:SnapIn>
         </File>
-        <File Id="ShareFile.Formats" Name="ShareFile.Format.ps1xml" Source="..\ShareFileSnapIn\bin\Release\ShareFile.Format.ps1xml" />
+        <File Id="ShareFile.Formats" Name="ShareFile.Format.ps1xml" Source="$(var.SourceRootPath)\ShareFile.Format.ps1xml" />
       </Component>
       <Component Id="ShareFile.Api.Client.Net45.dll" Guid="197793b8-c7a0-4cce-829a-56061065ea72" Win64="yes">
-        <File Id="ShareFile.Api.Client.Net45.dll" Name="ShareFile.Api.Client.Net45.dll" Source="..\ShareFileSnapIn\bin\Release\ShareFile.Api.Client.Net45.dll">
+        <File Id="ShareFile.Api.Client.Net45.dll" Name="ShareFile.Api.Client.Net45.dll" Source="$(var.SourceRootPath)\ShareFile.Api.Client.Net45.dll">
         </File>
       </Component>
       <Component Id="ShareFile.Api.Client.Core.dll" Guid="19c723f4-43be-4d3a-aef4-f9ecfe1fd13b" Win64="yes">
-        <File Id="ShareFile.Api.Client.Core.dll" Name="ShareFile.Api.Client.Core.dll" Source="..\ShareFileSnapIn\bin\Release\ShareFile.Api.Client.Core.dll">
+        <File Id="ShareFile.Api.Client.Core.dll" Name="ShareFile.Api.Client.Core.dll" Source="$(var.SourceRootPath)\ShareFile.Api.Client.Core.dll">
         </File>
       </Component>
       <Component Id="Newtonsoft.Json.dll" Guid="4b1b1ae5-b719-4d7d-b6ce-cfe20a09a0ea" Win64="yes">
-        <File Id="Newtonsoft.Json.dll" Name="Newtonsoft.Json.dll" Source="..\ShareFileSnapIn\bin\Release\Newtonsoft.Json.dll">
+        <File Id="Newtonsoft.Json.dll" Name="Newtonsoft.Json.dll" Source="$(var.SourceRootPath)\Newtonsoft.Json.dll">
         </File>
       </Component>
       <Component Id="NLog.dll" Guid="36a2c4e5-746a-4310-a8b3-f7fc7b587c06" Win64="yes">
-        <File Id="NLog.dll" Name="NLog.dll" Source="..\ShareFileSnapIn\bin\Release\NLog.dll">
+        <File Id="NLog.dll" Name="NLog.dll" Source="$(var.SourceRootPath)\NLog.dll">
         </File>
       </Component>
       <Component Guid="8f1a297e-8bec-4ccc-9051-4d53e876194b" Win64="yes">
-        <File Id="NLog.config" Name="NLog.config" KeyPath="yes" Source="..\ShareFileSnapIn\bin\Release\NLog.config">
+        <File Id="NLog.config" Name="NLog.config" KeyPath="yes" Source="$(var.SourceRootPath)\NLog.config">
         </File>
       </Component>
       <Component Guid="9e8a9642-059f-41a4-8fc2-533da4e73e4a" Win64="yes">
-        <File Name="InstallTestSnapIn.ps1" KeyPath="yes" Source="..\ShareFileSnapIn\bin\Release\Add-ShareFile-SnapIn.ps1" />
+        <File Name="InstallTestSnapIn.ps1" KeyPath="yes" Source="$(var.SourceRootPath)\Add-ShareFile-SnapIn.ps1" />
       </Component>
     </ComponentGroup>
   </Fragment>
