Fix for Script error in webpop up dialog (SFSDK-140)

--- a/ShareFileSnapIn-Installer-x32/Product.wxs
+++ b/ShareFileSnapIn-Installer-x32/Product.wxs
@@ -15,6 +15,7 @@
     <Feature Id="ProductFeature" Title="ShareFileSnapIn_Installer" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
       <ComponentRef Id="CMP_DocumentationShortcut" />
+      <ComponentRef Id="IEBrowserEmulation" />
     </Feature>
 
     <Icon Id="ShareFileIcon.ico" SourceFile="$(var.SourcePathAssets)\sf-icon.ico"/>
@@ -43,7 +44,13 @@
     <WixVariable Id="WixUILicenseRtf" Value="$(var.SourcePathAssets)\Citrix EULA.rtf" />
     <WixVariable Id="WixUIDialogBmp" Value="$(var.SourcePathAssets)\branding.jpg" />
   </Product>
-
+  
+  <Fragment>
+    <Component Id="IEBrowserEmulation" Win64="no" Directory="INSTALLFOLDER">
+      <RegistryValue Type="integer" Name="powershell.exe" Value="0" Action="write" Root="HKCU"
+                     Key="Software\Microsoft\Internet Explorer\Main\FeatureControl\FEATURE_BROWSER_EMULATION"/>
+    </Component>
+  </Fragment>
   <Fragment>
     <Property Id="POWERSHELL3VERSION" Secure="yes">
       <RegistrySearch Id="PowerShell3VersionSearch"
